search: Fixup a few details of the new layout
Set symbols are clickable, a float property was missing.
Table margins are collapsed correctly, setting padding and margin values.
Alternating colors across rows are back, removed transparent background.
Fixed a tiny overlap problem with the search bar.
Conditions rows are aligned with other rows.
Use a different background for light theme rows.

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ nearly black #292929
     --white: #f8f8f8;
     --violet: #f2f2ff;
     --blueish: #e0f0ff;
+    --realwhite: #fcfcfc;
 
     --green: green;
     --blue: #559eff;
@@ -76,7 +77,7 @@ nearly black #292929
 .light-theme {
     --normal: var(--black);
     --background: var(--white);
-    --tralternatebase: var(--white);
+    --tralternatebase: var(--realwhite);
     --tralternate: var(--violet);
     --hover: var(--blueish);
     --headingtext: var(--bluetext);
